--- a/styles/globals.css
+++ b/styles/globals.css
@@ -903,4 +903,10 @@
   width: 100%;
 }
 
+.flexCenter{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 
